# coinfolio-server-websockets

./: .gitignore  Cargo.toml  Dockerfile
certs/: coinamics.crt  coinamics.key
src/: Client.rs  Server.rs  Universal.rs  main.bup  main.bup.ok  main.bup2  main.bup3  main.rs
