[package]
name = "server-websockets"
version = "0.1.0"
authors = ["JB Dumont <jbmdumont@gmail.com>"]

[dependencies]
serde_json = "1.0"
serde_derive = "*"
serde = "*"
json = "*"
chrono = "0.4"
openssl="*"
ws = { version = "*", git = "https://github.com/housleyjk/ws-rs", features =["ssl"]}
time="*"

